--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,12 @@ python:
  - "3.5"
  #install:
  # - pip install -r requirements.txt
+ 
+ services:
+  - docker
+  
+  before_script: pip install docker-compose
+ 
  script:
-./gui/mvm_gui.py fakeESP32 
+ - docker-compose
+docker run app sh -c "python gui/mvm_gui.py fakeESP32"
