--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: python
 python:
  - "3.6"
 cache: pip
-install: "pip install -r requirements.txt"
+install: 
+ - curl -L http://sourceforge.net/projects/pyqt/files/PyQt4/PyQt-4.11.3/PyQt-x11-gpl-4.11.3.tar.gz -o /downloads/pyqt4.tar.gz
+ - "pip install -r requirements.txt"
+ 
 
 script: "python gui/mvm_gui.py fakeESP32"
+
