--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,6 @@ python:
 cache: pip
 install: 
  - pip install --upgrade pip
- - pip3 install -r requirements.txt
-#- curl -L http://sourceforge.net/projects/pyqt/files/PyQt4/PyQt-4.11.3/PyQt-x11-gpl-4.11.3.tar.gz -o pyqt4.tar.gz
-#- pip install -r requirements.txt
+ - pip install -r requirements.txt
  
 script: "python gui/mvm_gui.py fakeESP32"
-
