--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,12 @@ language: python
 python:
  - "3.6"
 cache: pip
+env:
+ - QT_DEBUG_PLUGINS=1
 install: 
  - pip install --upgrade pip
  - sudo apt-get install -qq libegl1-mesa
+ - sudo apt-get install libxcb-render-util0 libxcb-image0 libxcb-keysyms1 libxcb-icccm4
  - pip install -r requirements.txt
  
 script: "python gui/mvm_gui.py fakeESP32"
