--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
  - pip install --upgrade pip
  - sudo apt-get install -qq libegl1-mesa
  - sudo apt-get install libxcb-render-util0 libxcb-image0 libxcb-keysyms1 libxcb-icccm4 libxkbcommon-x11-0
+ - xdg-user-dirs-update
  - pip install -r requirements.txt
  
 script: "python gui/mvm_gui.py fakeESP32"
